src/snapshots/rbx_types_ops__floor_ceil_round_abs__f32_abs.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(-5.3f32).abs()"
---
Float32: 5.3
