src/snapshots/rbx_types_ops__floor_ceil_round_abs__matrix3_floor.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Matrix3::new(Vector3::new(6.6, 12.7, 18.2), Vector3::new(6.6, 12.7, 18.2),\nVector3::new(6.6, 12.7, 18.2)).floor()"
---
- - 6
  - 12
  - 18
- - 6
  - 12
  - 18
- - 6
  - 12
  - 18
