src/snapshots/rbx_types_ops__floor_ceil_round_abs__rect_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Rect::new(Vector2::new(5.3, 8.2),\nVector2::new(8.7, 15.6))).ceil()"
---
Rect:
  - - 6
    - 9
  - - 9
    - 16
