src/snapshots/rbx_types_ops__floor_ceil_round_abs__udim2_floor.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(UDim2::new(UDim::new(10.5, 15), UDim::new(10.5, 15))).floor()"
---
UDim2:
  - - 10
    - 15
  - - 10
    - 15
